Fixed the button on mobile view

--- a/src/components/SelectRole/SelectRole.css
+++ b/src/components/SelectRole/SelectRole.css
@@ -14,3 +14,16 @@ margin-bottom: 10px;
 margin-left: 10px;
 margin-right:10px;
 }
+
+
+.largebutton:hover{
+    background-color: white;
+    color: black;
+    width: 90%;
+    height: 100px; 
+    font-family: 'Montserrat', sans-serif;
+    font-size: 22px;    border-radius: 25px;
+    border: 2px solid #005C6E;
+    outline: none !important;
+
+  }
